html file paths updated

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta chartset="utf-8"/>
         <meta name="description" content="This is my Professional Portfolio designed to showcase my skills to employers"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./Rachael-Stead-Professional-Portfolio/Develop/assets/CSS/reset.css">
-        <link rel="stylesheet" href="./Rachael-Stead-Professional-Portfolio/Develop/assets/CSS/style.css">
+        <link rel="stylesheet" href="./Develop/css/style.css">
+        <link rel="stylesheet" href="./Develop/css/reset.css">
 
         <title>Rachael Stead Professional Portfolio</title>
     </Head>
@@ -27,21 +27,21 @@
         <div id="Skill-Sets-and-Acheivments" class="sidenav"> <!--SIDENAV--> 
             <div class="">
                
-                <img src="./Rachael-Stead-Professional-Portfolio/Develop/assets/Images/Skillset.jpg" alt="Skill Sets and Acheivments" width="250" height="250" >
+                <img src="./images/Skillset.jpg" alt="Skill Sets and Acheivments" width="250" height="250" >
                 <h2>Skill Sets and Acheivments</h2> 
                 <p>
                          <a href="./Rachael-Stead-Professional-Portfolio/Develop/assets/skills.html">Click Here</a> 
                         for a full list of skills, credentials and acheivments.<br>
                     </p>            
         <div id="Projects-and-Applications" class="Projects and Applications">
-            <img src="./Rachael-Stead-Professional-Portfolio/Develop/assets/Images/Projects.jpg" alt="Projects" width="200" height="200">    
+            <img src="./images/Projects.jpg" alt="Projects" width="200" height="200">    
                 <h2>Projects and Applications</h2> 
                     <p>
                          <a href="./Rachael-Stead-Professional-Portfolio/Develop/assets/projects.html">Click Here</a> 
                          to veiw some of the projects and applications I have worked on.<br> 
                     </p>               
         <div id="Lets-Connect" class="Contact-Details">
-            <img src="./Rachael-Stead-Professional-Portfolio/Develop/assets/Images/Contact.jpg" alt="Contact Details" width="150" height="150">                
+            <img src="./images/Contact.jpg" alt="Contact Details" width="150" height="150">                
                 <h2>Contact Me</h2> 
                     <ul>
                         <li> 
@@ -60,8 +60,8 @@
 
 <section>
     <div id="About-Me"class="aboutme">     
-                <img src="./Rachael-Stead-Professional-Portfolio/Develop/assets/Images/sidenavtop2.jpg" alt="side-nav-art" height="500" width="300"> 
-                <img src="./Rachael-Stead-Professional-Portfolio/Develop/assets/Images/Portfoliome.jpg" alt="Rachael Stead portfolio picture" width="400" height="500"><br>
+                <img src="./images/sidenavtop2.jpg" alt="side-nav-art" height="500" width="300"> 
+                <img src="./images/Portfoliome.jpg" alt="Rachael Stead portfolio picture" width="400" height="500"><br>
                 <br><br><h2>"What is normal to the spider is chaos for the fly" - Morticia Addams</h2> 
                 <p>
                     Hello my name is Rachael.<br>
