--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta chartset="utf-8"/>
         <meta name="description" content="This is my Professional Portfolio designed to showcase my skills to employers"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./Develop/css/style.css">
-        <link rel="stylesheet" href="./Develop/css/reset.css">
+        <link rel="stylesheet" href="./CSS/style.css">
+        <link rel="stylesheet" href="./CSS/reset.css">
 
         <title>Rachael Stead Professional Portfolio</title>
     </Head>
@@ -25,19 +25,17 @@
 
     <aside>
         <div id="Skill-Sets-and-Acheivments" class="sidenav"> <!--SIDENAV--> 
-            <div class="">
-               
                 <img src="./images/Skillset.jpg" alt="Skill Sets and Acheivments" width="250" height="250" >
                 <h2>Skill Sets and Acheivments</h2> 
                 <p>
-                         <a href="./Rachael-Stead-Professional-Portfolio/Develop/assets/skills.html">Click Here</a> 
+                         <a href="./skills.html">Click Here</a> 
                         for a full list of skills, credentials and acheivments.<br>
                     </p>            
         <div id="Projects-and-Applications" class="Projects and Applications">
             <img src="./images/Projects.jpg" alt="Projects" width="200" height="200">    
                 <h2>Projects and Applications</h2> 
                     <p>
-                         <a href="./Rachael-Stead-Professional-Portfolio/Develop/assets/projects.html">Click Here</a> 
+                         <a href="./projects.html">Click Here</a> 
                          to veiw some of the projects and applications I have worked on.<br> 
                     </p>               
         <div id="Lets-Connect" class="Contact-Details">
@@ -67,7 +65,7 @@
                     Hello my name is Rachael.<br>
                     I am currently enroled in the Adelaide Uni Coding bootcamp.<br>
                     By the end of the year I aim to be employed with a remote role working as a Web/Programm Develper.<br>
-                    <a href="./Rachael-Stead-Professional-Portfolio/Develop/assets/aboutme.html">Click Here</a> 
+                    <a href="./aboutme.html">Click Here</a> 
                     to learn more about my journey.<br> 
                 </p> 
                    
